tests/rosetta/out/Fortran/checkpoint-synchronization-3.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program checkpoint_synchronization_3
  implicit none
  integer, dimension(4) :: partList
  integer :: nAssemblies
  integer :: p
  integer :: i0
  integer :: cycle
    character(len=100) :: s1
    character(len=100) :: a
    integer :: i2
    character(len=100) :: s3
  integer :: i4
    character(len=100) :: up
    character(len=100) :: low
    integer :: i
  partList = (/'A','B','C','D'/)
  nAssemblies = 3
  do i0 = 1, size(partList)
    p = partList(i0)
    print *, p // ' worker running'
  end do
  do cycle = 1, ((nAssemblies + 1))
    write(s1,'(G0)') cycle
    print *, 'begin assembly cycle ' // s1
    a = ''
    do i2 = 1, size(partList)
      p = partList(i2)
      print *, p // ' worker begins part'
      print *, trim(p // ' worker completed ') // lower(p)
      a = (a + lower(p))
    end do
    write(s3,'(G0)') cycle
    print *, trim(trim(a // ' assembled.  cycle ') // s3) // ' complete'
  end do
  do i4 = 1, size(partList)
    p = partList(i4)
    print *, p // ' worker stopped'
  end do
  
  contains
  recursive character(len=100) function lower(ch) result(res)
    character(len=100), intent(in) :: ch
    up = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
    low = 'abcdefghijklmnopqrstuvwxyz'
    i = 0
    do while ((i < 26))
      if ((ch == up(i+1:(i + 1)))) then
        res = low(i+1:(i + 1))
        return
      end if
      i = (i + 1)
    end do
    res = ch
    return
  end function lower
end program checkpoint_synchronization_3
